update fe admin

--- a/frontend/src/component/sidebar/styles.css
+++ b/frontend/src/component/sidebar/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
 .sidebar {
   background-color: #73a942;
   height: 100vh;
@@ -9,16 +11,17 @@
   flex-direction: column;
 }
 ::-webkit-scrollbar {
-    width: 5px;
-  }
-  ::-webkit-scrollbar-thumb {
-    background: #1a4301;
-  }
+  width: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background: #1a4301;
+}
 .sidebar .sidebar-header {
   padding: 24px 24px 0px 24px;
   margin-bottom: 32px;
   cursor: pointer;
 }
+
 .sidebar .sidebar-content .link {
   background-color: #aad576;
   margin: 16px 16px;
@@ -37,6 +40,25 @@
 }
 
 .sidebar .link .link_text {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 21px;
+  margin: 0;
+  color: #1a4301;
+}
+
+.sidebar .sidebar-footer .logout {
+  cursor: pointer;
+  margin: 24px;
+  bottom: 0;
+  position: fixed;
+}
+.sidebar .sidebar-footer .logout img {
+  padding-right: 8px;
+}
+.sidebar .sidebar-footer .logout p {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 600;
